# polyrpc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: README.md  config.json
.github/workflows/: ci.yml  release.yml
crates/sentinel/: Cargo.toml
crates/sentinel/src/: config.rs  generator.rs  main.rs  parser.rs  watcher.rs
examples/electron-python/: README.md  polyrpc.toml
examples/electron-python/backend/: main.py  requirements.txt
examples/fastapi-nextjs/: README.md  polyrpc.toml
examples/fastapi-nextjs/backend/: main.py
examples/fastapi-nextjs/frontend/: next.config.js  package.json
examples/fastapi-nextjs/frontend/src/app/: layout.tsx  page.tsx  providers.tsx
examples/fastapi-nextjs/frontend/src/lib/: polyrpc.ts
www/: package.json  tailwind.config.ts  vercel.json
www/src/app/: globals.css  layout.tsx  page.tsx
www/src/app/docs/: layout.tsx  page.tsx
www/src/app/docs/getting-started/: page.tsx
www/src/components/: CTA.tsx  CodePreview.tsx  Comparison.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallTabs.tsx  Navbar.tsx  Testimonials.tsx
