[package]
name = "polyrpc-sentinel"
version = "0.1.0"
edition = "2021"
description = "Real-time Python to TypeScript type generator"
license = "MIT"
repository = "https://github.com/uvenkatateja/polyrpc"

[[bin]]
name = "polyrpc"
path = "src/main.rs"

[dependencies]
# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Python parsing
tree-sitter = "0.22"
tree-sitter-python = "0.21"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
